--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -52,6 +52,14 @@ ul {
     display: flex;
 }
 
+.text-default {
+    font-family: "Montserrat", sans-serif;
+    font-size: 0.9em;
+    line-height: 21px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+}
+
 .container {
     padding-bottom: 100px;
 }
@@ -60,64 +68,41 @@ ul {
     margin-top: 150px !important;
 }
 
+.top__section-right {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+
 .top__section-right__buttons {
+    width: 167px;
+}
+
+.hexagon__shadow {
+    transition: all .15s ease-in-out;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
+}
+
+.hexagon__shadow:hover {
+    filter: drop-shadow(0 0 7px rgba(0, 0, 0, 0.25));
+}
+
+.hexagon__button.start-project, .hexagon__button.telegram {
+    width: 100%;
+    height: 48px;
+}
+
+.hexagon__button.telegram {
+    margin-bottom: 27px;
+    background: #ffffff;
+}
+
+.hexagon__button.telegram:after {
+    content: url("../images/icons/telegram-icon.svg");
     position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
-.hexagon__container {
-    width: 120px;
-    height: 40px;
-    background: transparent;
-    position: relative;
-    display: inline-block;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-}
-
-.hexagon__container::before {
-    content: "";
-    position: absolute;
-    left: -25px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 23px 25px 23px 0;
-    border-color: transparent white transparent transparent;
-}
-
-.hexagon__container::after {
-    content: "";
-    position: absolute;
-    right: -25px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 23px 0 23px 25px;
-    border-color: transparent transparent transparent white;
-}
-
-.hexagon__container.message, .hexagon__container.start {
-    width: 162px;
-    height: 47px;
-}
-
-.hexagon__container.message {
-    align-items: center;
-    justify-content: center;
-}
-
-.hexagon__container.start {
-    align-items: center;
-    justify-content: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 17px;
-    line-height: 21px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    text-align: center;
-    background: var(--main-bg-gradient);
-    filter: var(--main-bg-filter);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .logo__container {
@@ -135,7 +120,7 @@ ul {
 
 .main__title {
     font-family: MontserratRegular, sans-serif;
-    font-size: 65px;
+    font-size: 3.5em;
     line-height: 80px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -143,8 +128,9 @@ ul {
 }
 
 .main__description {
+    max-width: 495px;
     font-family: MontserratRegular, sans-serif;
-    font-size: 18px;
+    font-size: 0.95em;
     line-height: 22px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -154,13 +140,11 @@ ul {
 }
 
 .box__send-contact {
-    width: 100%;
+    width: calc(100% - 25px);
     max-width: 520px;
     height: 63px;
     margin-top: 70px;
-    /*border: 2px solid #B4B3B3;*/
     box-sizing: border-box;
-    box-shadow: 0 0 10px rgba(131, 131, 131, 0.3);
     position: relative;
 }
 
@@ -169,10 +153,14 @@ ul {
     border: none;
     outline: none;
     padding-left: 20px;
+
+    -webkit-clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 25px 100%, 0% 50%, 25px 0%);
+    clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 25px 100%, 0% 50%, 25px 0%);
 }
 
 .box__send-contact__btn {
-    flex-basis: 130px;
+    width: 100%;
+    height: 100%;
     border: none;
     font-family: "MontserratBold", sans-serif;
     font-size: 13px;
@@ -182,21 +170,23 @@ ul {
     letter-spacing: 0.04em;
     background: var(--main-bg-gradient);
     filter: var(--main-bg-filter);
+    -webkit-clip-path: polygon(105px 0%, 100% 50%, 105px 100%, 0% 100%, 0% 0%, 0% 0%);
+    clip-path: polygon(105px 0%, 100% 50%, 105px 100%, 0% 100%, 0% 0%, 0% 0%);
 }
 
-.box__send-contact:before {
-    content: "";
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 31px 28px 31px 0;
-    border-color: transparent #FFF transparent transparent;
-    position: absolute;
-    left: -30px;
-    top: 0;
+.hexagon__shadow.send-contact {
+    flex-basis: 130px;
+    margin-right: -25px;
+}
+
+.send-contact__input {
+    flex: auto;
+
 }
 
 .box__send-contact__input {
+    width: 100%;
+    height: 100%;
     font-family: MontserratRegular, sans-serif;
     font-weight: 500;
     font-size: 13px;
@@ -228,16 +218,16 @@ ul {
 }
 
 .section__services {
-    margin-top: 170px !important;
+    margin-top: 100px !important;
 }
 
 .section__services__item {
-    margin-right: 32px;
+    display: flex;
+    width: 100%;
     margin-bottom: 32px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    max-width: 479px;
     height: 531px;
     background: #FFFFFF;
     box-shadow: 0 0 19px rgba(0, 0, 0, 0.25);
@@ -298,7 +288,7 @@ ul {
 .service__hexagon__title {
     margin-top: 63px;
     font-family: "Montserrat", sans-serif;
-    font-size: 35px;
+    font-size: 1.5em;
     line-height: 43px;
     text-align: center;
     letter-spacing: 0.04em;
@@ -323,13 +313,17 @@ ul {
     justify-content: space-around;
 }
 
+.section__services__container > div {
+    /*flex: 0 0 33%;*/
+}
+
 .section__description {
     width: 100%;
     max-width: 750px;
     margin: 0 auto;
     margin-bottom: 30px;
     font-family: Montserrat, sans-serif;
-    font-size: 20px;
+    font-size: 1.1em;
     line-height: 24px;
     text-align: center;
     letter-spacing: 0.04em;
@@ -348,15 +342,21 @@ ul {
     padding-left: 0 !important;
 }
 
-.section__portfolio__filter > li {
+.section__portfolio__filter a {
     font-family: Montserrat, sans-serif;
-    font-size: 30px;
+    font-size: 1.4em;
     line-height: 37px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
+    text-decoration: none;
+    color: #4B4B4B;
 }
 
-.section__portfolio__filter > li.active {
+.section__portfolio__filter a:hover {
+    color: #4B4B4B;
+}
+
+.section__portfolio__filter a.active {
     background: var(--primary-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -432,6 +432,7 @@ ul {
     width: 260px;
     height: 55px;
     margin: 0 auto;
+    border: none;
     position: relative;
     background: var(--main-bg-gradient);
     -webkit-clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
@@ -439,9 +440,13 @@ ul {
 }
 
 .additional-action {
+    display: inline-block;
     margin-top: 20px;
+}
+
+.additional-action > button {
     font-family: Montserrat, sans-serif;
-    font-size: 24px;
+    font-size: 1em;
     line-height: 29px;
     text-align: center;
     letter-spacing: 0.04em;
@@ -449,10 +454,13 @@ ul {
     cursor: pointer;
 }
 
+.section__pricing {
+    text-align: center;
+}
+
 .section__pricing__plan {
     box-shadow: 0 0 10px rgba(174, 174, 174, 0.28);
-    padding: 0 !important;
-    margin-bottom: 20px;
+    padding-bottom: 70px;
     /*margin: 0 10px;*/
     /*width: 32% !important;*/
 }
@@ -472,21 +480,26 @@ ul {
     font-family: "MontserratSemiBold", sans-serif;
     font-weight: 500;
     line-height: 55px;
-    font-size: 2.8em;
+    font-size: 2em;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     position: relative;
 }
 
+.section__pricing__plan__footer {
+    display: block;
+}
+
 .section__pricing__plan__content {
-    margin: 150px 0 83px;
-    padding: 0 42px;
+    margin: 150px 0 40px;
+    padding: 0 20px;
 }
 
 .section__pricing__offer {
     position: relative;
     padding-left: 10px;
     margin-bottom: 21px;
+    text-align: left;
 }
 
 .section__pricing__offer:before {
@@ -497,8 +510,34 @@ ul {
     top: 0;
 }
 
+.section__pricing__item {
+    margin-bottom: 20px;
+}
+
 .section__pricing__offer p, .section__pricing__offers {
     margin: 0;
+}
+
+.section__pricing__offers {
+    height: 300px;
+    overflow-y: auto;
+}
+
+.section__pricing__offers::-webkit-scrollbar {
+    width: 4px;
+}
+
+.section__pricing__offers::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.section__pricing__offers::-webkit-scrollbar-thumb {
+    background: #d8d6d6;
+    border-radius: 5px;
+}
+
+.section__pricing__offers::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .hexagon__transparent {
@@ -506,23 +545,31 @@ ul {
 }
 
 .hexagon__transparent:before {
-    /*top: 1px;*/
-    /*left: 1px;*/
+    top: 0;
+    left: 0;
     height: calc(100% - 3px);
     width: calc(100% - 3px);
     position: absolute;
     content: '';
-    background: white;
+    background-color: #ffffff;
+    z-index: -1;
+
     -webkit-clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
     clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
 }
 
 .submit__plan {
     width: 230px;
+    margin-bottom: 10px;
 }
 
 .edit__plan {
     width: 90px;
+}
+
+.edit__plan:before, .submit__plan:before {
+    left: 1px;
+    top: 1px;
 }
 
 .edit__plan:after {
@@ -538,32 +585,29 @@ ul {
     clip-path: polygon(80% 0%, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0%);
 }
 
-.submit__plan span {
+.submit__plan {
     font-family: Arsenal, sans-serif;
     position: relative;
     z-index: 111;
-    font-size: 26px;
+    font-size: 1.5em;
     line-height: 33px;
-    background: var(--primary-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.section__pricing__plan__footer {
-    margin-bottom: 70px;
+    color: #FF8008;
 }
 
 .section__pricing__hexagon {
+    position: absolute;
+    bottom: -50px;
+}
+
+.section__pricing__hexagon > .service__hexagon {
     width: 90px;
     height: 100px;
     background: #FFC233;
     box-shadow: 0 0 60px rgba(131, 131, 131, 0.3);
-    position: absolute;
-    bottom: -50px;
     transform: rotate(180deg);
 }
 
-.section__pricing__hexagon:before {
+.section__pricing__hexagon > .service__hexagon:before {
     content: inherit;
 }
 
@@ -571,8 +615,15 @@ ul {
     position: relative;
 }
 
+.slick-slide {
+    margin: 0 10px;
+}
+
 .section__partners__slide .slick-slide img {
     filter: grayscale(100%);
+    width: 100%;
+    max-width: 130px;
+    object-fit: contain;
 }
 
 .section__partners__slide .slick-slide:hover img {
@@ -638,6 +689,7 @@ ul {
     font-size: 35px;
     line-height: 36px;
     color: #FFFFFF;
+    margin-bottom: 10px;
 }
 
 .footer__block__list__item {
