--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,6 +34,7 @@ body, ul, p, h1, h2 h3 {
 }
 
 :root {
+    --primary-text-color: #FF8008;
     --primary-color: linear-gradient(#FF8008 100%, #FFC837 100%, #FFFFFF 100%, #FFC837 100%);
     --main-bg-gradient: linear-gradient(89.93deg, #FF8008 -65.4%, #FFC837 99.88%, rgba(255, 255, 255, 0) 99.88%, #FFC837 99.88%);
     --main-bg-filter: drop-shadow(0px 0px 9px rgba(131, 131, 131, 0.3));
@@ -114,7 +115,7 @@ ul {
 }
 
 .menu__item.active, .menu__item:hover {
-    color: #FF8008;
+    color: var(--primary-text-color);
     text-decoration: underline;
 }
 
@@ -191,6 +192,10 @@ ul {
 
 .top__section-right__buttons {
     width: 167px;
+    position: fixed;
+    top: 60%;
+    right: 30px;
+    z-index: 3;
 }
 
 .hexagon__shadow {
@@ -198,7 +203,7 @@ ul {
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
 }
 
-.hexagon__shadow:hover {
+.hexagon__shadow:not(.send-contact__input):hover {
     filter: drop-shadow(0 0 7px rgba(0, 0, 0, 0.25));
 }
 
@@ -278,11 +283,12 @@ ul {
     height: 100%;
     border: none;
     font-family: "MontserratBold", sans-serif;
-    font-size: 13px;
+    font-size: 18px;
     line-height: 15px;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.04em;
+    color: #000000;
     background: var(--main-bg-gradient);
     filter: var(--main-bg-filter);
     -webkit-clip-path: polygon(105px 0%, 100% 50%, 105px 100%, 0% 100%, 0% 0%, 0% 0%);
@@ -296,7 +302,6 @@ ul {
 
 .send-contact__input {
     flex: auto;
-
 }
 
 .box__send-contact__input {
@@ -304,9 +309,9 @@ ul {
     height: 100%;
     font-family: MontserratRegular, sans-serif;
     font-weight: 500;
-    font-size: 13px;
+    font-size: 18px;
     line-height: 15px;
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.45);
 }
 
 .top__video__close {
@@ -400,7 +405,7 @@ ul {
 }
 
 .section__services__item:hover {
-    transform: scale(1.02);
+
 }
 
 .section__services__item:hover > .service__hexagon {
@@ -508,7 +513,7 @@ ul {
 .section__portfolio__filter a {
     font-family: Montserrat, sans-serif;
     font-size: 1.4em;
-    line-height: 37px;
+    line-height: 45px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     text-decoration: none;
@@ -519,10 +524,16 @@ ul {
     color: #4B4B4B;
 }
 
-.section__portfolio__filter a.active {
-    background: var(--primary-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.section__portfolio__filter > .active {
+    border-bottom: 2px solid var(--primary-text-color);
+}
+
+.section__portfolio__filter > .active a {
+    color: var(--primary-text-color);
+}
+
+.section__portfolio__filter > li {
+    height: 38px;
 }
 
 .section__portfolio__filter > li:not(:last-child) {
@@ -550,6 +561,7 @@ ul {
     height: 100%;
     margin: 0 auto;
     padding: 20px;
+    text-align: left;
     flex-direction: column;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -624,8 +636,11 @@ ul {
 .section__pricing__plan {
     box-shadow: 0 0 10px rgba(174, 174, 174, 0.28);
     padding-bottom: 70px;
-    /*margin: 0 10px;*/
-    /*width: 32% !important;*/
+    cursor: pointer;
+}
+
+.section__pricing__plan:hover {
+    box-shadow: 0 0 9px 2px rgba(255, 193, 51, 0.3);
 }
 
 .section__pricing {
@@ -637,7 +652,7 @@ ul {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 203px;
+    height: 165px;
     background-color: #F0F0F0;
     text-align: center;
     font-family: "MontserratSemiBold", sans-serif;
@@ -654,7 +669,7 @@ ul {
 }
 
 .section__pricing__plan__content {
-    margin: 150px 0 40px;
+    margin: 100px 0 40px;
     padding: 0 20px;
 }
 
@@ -726,26 +741,16 @@ ul {
     margin-bottom: 10px;
 }
 
-.edit__plan {
-    width: 90px;
+.submit__plan:before {
+    -webkit-clip-path: polygon(206px 3px, 227px 27px, 206px 52px, 24px 52px, 3px 28px, 24px 3px);
+    clip-path: polygon(206px 3px, 227px 27px, 206px 52px, 24px 52px, 3px 28px, 24px 3px);
 }
 
-.edit__plan:before, .submit__plan:before {
-    left: 1px;
-    top: 1px;
-}
-
-.edit__plan:after {
-    content: url("../images/icons/pencil.svg");
-    width: 25px;
-    height: 25px;
-    z-index: 111;
-    position: relative;
-}
-
-.hexagon__transparent.edit__plan:before, .hexagon__transparent.edit__plan {
-    -webkit-clip-path: polygon(80% 0%, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0%);
-    clip-path: polygon(80% 0%, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0%);
+.section__pricing__price {
+    font-size: 30px;
+    line-height: 37px;
+    margin-bottom: 0;
+    color: var(--primary-text-color);
 }
 
 .submit__plan {
@@ -754,7 +759,7 @@ ul {
     z-index: 111;
     font-size: 1.5em;
     line-height: 33px;
-    color: #FF8008;
+    color: var(--primary-text-color);
 }
 
 .section__pricing__hexagon {
@@ -786,6 +791,7 @@ ul {
     filter: grayscale(100%);
     width: 100%;
     max-width: 130px;
+    margin: 0 auto;
     object-fit: contain;
 }
 
@@ -796,20 +802,33 @@ ul {
 /* Slick slider */
 .slick-prev, .slick-next {
     border: none;
-    background: white url("../images/icons/hexagon-icon.svg") no-repeat 50%;
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    bottom: -100px;
-    transform: translateX(-50%);
+    -webkit-clip-path: polygon(55px 0%, 100% 50%, 55px 100%, 15px 100%, 0% 50%, 15px 0%);
+    clip-path: polygon(55px 0%, 100% 50%, 55px 100%, 15px 100%, 0% 50%, 15px 0%);
+    width: 70px;
+    height: 70px;
     background-size: 100%;
 }
 
-.slick-prev {
+
+.section__partners > .hexagon__shadow {
+    position: absolute;
+    bottom: -100px;
+    transform: translateX(-50%);
+}
+
+.section__partners > .hexagon__shadow:hover > .hexagon__button:before {
+    background-color: transparent;
+}
+
+.section__partners > .hexagon__shadow.prev {
     left: calc(50% - 50px);
 }
 
-.slick-prev:before {
+.section__partners > .hexagon__shadow.next {
+    left: calc(50% + 50px);
+}
+
+.slick-prev:after {
     content: url("../images/icons/arrow-left.svg");
     position: absolute;
     top: 50%;
@@ -817,16 +836,22 @@ ul {
     transform: translate(-50%, -50%);
 }
 
-.slick-next {
-    left: calc(50% + 50px);
-}
-
-.slick-next:before {
+.slick-next:after {
     content: url("../images/icons/arrow-right.svg");
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.slick-prev:before, .slick-next:before {
+    -webkit-clip-path: polygon(53px 2px, 67px 35px, 53px 67px, 18px 70px, 3px 35px, 17px 2px);
+    clip-path: polygon(53px 2px, 67px 35px, 53px 67px, 18px 70px, 3px 35px, 17px 2px);
+}
+
+.slick-track {
+    display: inline-flex !important;
+    align-items: center;
 }
 
 /* Footer */
