--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -54,6 +54,10 @@
         height: 130px;
         font-size: 14px;
     }
+
+    .top__section-right__buttons {
+        position: inherit;
+    }
 }
 
 @media screen and (max-width: 992px) {
