--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -58,6 +58,15 @@
     .top__section-right__buttons {
         position: inherit;
     }
+
+    .create__plan__row {
+        flex-direction: column;
+    }
+
+    .create__plan__row__text {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
 }
 
 @media screen and (max-width: 992px) {
