--- a/assets/styles/portfolio.css
+++ b/assets/styles/portfolio.css
@@ -20,6 +20,7 @@
     width: 130px;
     height: 140px;
     background: var(--main-bg-gradient);
+    transform: rotate(90deg);
 }
 
 .portfolio__hexagon__text {
