--- a/assets/styles/blog.css
+++ b/assets/styles/blog.css
@@ -26,11 +26,15 @@
 
 .blog {
     margin-bottom: 100px;
+    justify-content: space-between;
+    display: inline-flex;
+    flex-direction: column;
 }
 
 .blog__image {
     width: 100%;
-    margin-bottom: 15px;
+    height: 100%;
+    object-fit: cover;
 }
 
 .section__blog__title {
@@ -44,4 +48,28 @@
     line-height: 22px;
     text-transform: inherit;
     margin-bottom: 0;
+}
+
+.blog__video__container {
+    position: relative;
+    cursor: pointer;
+    flex: auto;
+    margin-bottom: 15px;
+}
+
+.blog__video {
+    width: 100%;
+    height: 100%;
+}
+
+.blog__video__container:not(.active):before {
+    content: "";
+    background: no-repeat url("../images/icons/player-icon.svg");
+    background-size: 100%;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
