--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -1,15 +1,3 @@
-@media (min-width: 1400px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        /*max-width: 1920px !important;*/
-    }
-}
-
-@media screen and (min-width: 1140px) {
-    /*.page__description__hexagon {*/
-    /*    height: 140px;*/
-    /*}*/
-}
-
 @media screen and (min-width: 1140px) {
     .section__pricing__plan__header {
         font-size: 2.8em;
@@ -71,6 +59,57 @@
     .blog__video {
         min-height: 303px;
     }
+
+    .section__project {
+        align-items: center;
+    }
+
+    .section__project__slide {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .project__right__slide {
+        flex-direction: row;
+        margin-top: 20px;
+    }
+
+    .project__right__slide > li {
+        margin-right: 5px;
+    }
+
+    .section__footer, .about__project__header, .section__project {
+        flex-direction: column;
+    }
+
+    .section__footer__text {
+        margin-bottom: 20px;
+    }
+
+    .about__project__subtitle {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .project-inner__about {
+        text-align: center;
+    }
+
+    .project__name {
+        font-size: 25px;
+    }
+
+    .project-inner__desc > .section__description {
+        font-size: 15px;
+    }
+
+    .project-inner__desc > .about__project__subtitle {
+        font-size: 20px;
+    }
+
+    .project-inner__desc {
+        margin-top: 20px;
+    }
 }
 
 @media screen and (max-width: 992px) {
@@ -108,5 +147,12 @@
 
     .section {
         margin-top: 100px !important;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .section__project__slide > .slick-arrow {
+        width: 35px;
+        height: 35px;
     }
 }
