--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -129,8 +129,11 @@ a:hover {
     text-decoration: none;
 }
 
-.menu__item.active, .menu__item:hover {
-    color: var(--primary-text-color);
+.menu__item.active,
+.menu__item:hover,
+.section__portfolio__filter > .active > a,
+.section__portfolio__filter > li:hover a {
+    color: #FFC837;
     text-decoration: underline;
 }
 
@@ -213,13 +216,17 @@ a:hover {
     z-index: 3;
 }
 
+.hexagon__shadow:hover > .hexagon__button:before {
+    background: transparent;
+}
+
 .hexagon__shadow {
     transition: all .15s ease-in-out;
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0 0 3px rgba(131, 131, 131, 0.3));
 }
 
 .hexagon__shadow:not(.send-contact__input):hover {
-    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
 }
 
 .hexagon__button.start-project, .hexagon__button.telegram {
@@ -229,7 +236,6 @@ a:hover {
 
 .hexagon__button.telegram {
     margin-bottom: 27px;
-    background: #ffffff;
 }
 
 .hexagon__button.telegram:after {
@@ -242,7 +248,7 @@ a:hover {
 
 .logo__container {
     text-align: center;
-    max-width: 495px;
+    max-width: 460px;
 }
 
 .logo__container__main {
@@ -261,7 +267,7 @@ a:hover {
     letter-spacing: 0.04em;
     text-transform: uppercase;
     margin-bottom: 0;
-    max-width: 495px;
+    max-width: 440px;
 }
 
 .main__description {
@@ -338,7 +344,7 @@ a:hover {
     position: absolute;
     top: 80px;
     left: 30px;
-    z-index: 3;
+    z-index: 557;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.2);
     transition: all .3s ease-in-out;
@@ -350,40 +356,39 @@ a:hover {
 }
 
 .top__video {
-    width: 750px;
-    height: 550px;
+    width: 100%;
     cursor: pointer;
     transition: all 1.5s ease-in-out;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    z-index: 2;
 
     -webkit-clip-path: polygon(100% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 50%, 10% 0%);
     clip-path: polygon(100% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 50%, 10% 0%);
 }
 
 .full__screen.active > .top__video {
-    max-width: inherit;
-    width: 100%;
-    height: calc(100vh - 50px);
-
+    height: 100%;
     -webkit-clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
     clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 60%, 0% 0%);
 }
 
-.full__screen.active > .top__video__close {
-    display: block;
+.full__screen {
+    width: 750px;
+    height: 650px;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    z-index: 554;
+    filter: url(#round);
+    transition: all 1.5s ease-in-out;
 }
 
-.full__screen.active > .full__screen__back {
+.full__screen.active {
+    max-width: inherit;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
     top: 0;
-    left: 0;
-    z-index: 1;
+    right: 0;
+    filter: inherit;
+    z-index: 556;
 }
 
 .section__title {
@@ -489,7 +494,7 @@ a:hover {
     height: 180px;
     width: 150px;
     position: relative;
-    background: var(--main-light-grey);
+    background: #E0E0E0;
     transition: all .3s ease-out;
 
     -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
@@ -585,14 +590,6 @@ a:hover {
 
 .section__portfolio__filter a:hover {
     color: #4B4B4B;
-}
-
-.section__portfolio__filter > .active {
-    border-bottom: 2px solid var(--primary-text-color);
-}
-
-.section__portfolio__filter > .active a {
-    color: var(--primary-text-color);
 }
 
 .section__portfolio__filter > li {
@@ -798,8 +795,8 @@ a:hover {
 .hexagon__transparent:before {
     top: 0;
     left: 0;
-    height: calc(100% - 3px);
-    width: calc(100% - 3px);
+    height: 100%;
+    width: 100%;
     position: absolute;
     content: '';
     background-color: #ffffff;
@@ -807,11 +804,6 @@ a:hover {
 
     -webkit-clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
     clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
-}
-
-.submit__plan:before {
-    -webkit-clip-path: polygon(204px 4px, 225px 27px, 203px 51px, 26px 51px, 5px 28px, 26px 4px);
-    clip-path: polygon(204px 4px, 225px 27px, 203px 51px, 26px 51px, 5px 28px, 26px 4px);
 }
 
 .section__pricing__price {
@@ -851,6 +843,7 @@ a:hover {
 
 .section__partners {
     position: relative;
+    margin-top: 85px !important;
 }
 
 .slick-slide {
@@ -955,10 +948,11 @@ a:hover {
 .footer__block__list__item {
     margin-bottom: 15px;
     color: #ffffff;
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     line-height: 24px;
     text-transform: uppercase;
+    letter-spacing: 0.06em;
     position: relative;
 }
 
@@ -1007,6 +1001,11 @@ a:hover {
 
 .footer__block {
     flex-basis: 100%;
+}
+
+.contacts > .footer__block__list__item {
+    text-transform: inherit;
+    letter-spacing: inherit;
 }
 
 .footer__block:not(:last-child) {
@@ -1089,4 +1088,13 @@ a:hover {
 
 .create__plan__row > .additional-action {
     margin-top: 0;
+}
+
+.hexagon__link {
+    color: #000000;
+    text-decoration: none;
+}
+
+.hexagon__link:hover {
+    color: #000000;
 }
