--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1098,3 +1098,18 @@ a:hover {
 .hexagon__link:hover {
     color: #000000;
 }
+
+.full__screen.active .over-layer {
+    display: none;
+}
+
+.over-layer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 55;
+    width: 100%;
+    height: 85%;
+    background: transparent;
+    border-radius: 20%;
+}
