--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -340,19 +340,13 @@ a:hover {
     display: none;
     padding: 0 20px;
     color: #ffffff;
-    font-size: 40px;
+    font-size: 24px;
     position: absolute;
     top: 80px;
-    left: 30px;
+    right: 30px;
     z-index: 557;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.2);
     transition: all .3s ease-in-out;
-}
-
-.top__video__close:hover {
-    font-size: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .top__video {
@@ -378,7 +372,7 @@ a:hover {
     right: 0;
     z-index: 554;
     filter: url(#round);
-    transition: all 1.5s ease-in-out;
+    transition-duration: 1.2s;
 }
 
 .full__screen.active {
