--- a/assets/styles/aboutUs.css
+++ b/assets/styles/aboutUs.css
@@ -6,11 +6,12 @@
     width: 100%;
     padding: 35px 25px 25px 25px;
     margin: 40px 0;
-    background: #ffffff;
-    filter: drop-shadow(0px 0px 15px rgba(142, 142, 142, 0.56));
     text-align: left;
     height: 348px;
     cursor: pointer;
+
+    background: linear-gradient(89.93deg, #FF8008 -65.4%, #FFC837 99.88%, rgba(255, 255, 255, 0) 99.88%, #FFC837 99.88%);
+    filter: drop-shadow(0px 0px 15px rgba(142, 142, 142, 0.56));
 }
 
 .section__about-us {
@@ -20,9 +21,20 @@
     justify-content: space-around;
 }
 
-.team__member:hover {
-    background: linear-gradient(89.93deg, #FF8008 -65.4%, #FFC837 99.88%, rgba(255, 255, 255, 0) 99.88%, #FFC837 99.88%);
-    filter: drop-shadow(0px 0px 15px rgba(142, 142, 142, 0.56));
+.team__member:hover > .background-curtain {
+    opacity: 0;
+}
+
+.background-curtain {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: white;
+    z-index: -1;
+    opacity: 1;
+    transition: all .5s ease-in-out;
 }
 
 .team__member__name {
