--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -213,7 +213,7 @@ a:hover {
     position: fixed;
     top: 80%;
     right: 30px;
-    z-index: 3;
+    z-index: 7;
 }
 
 .hexagon__shadow:hover > .hexagon__button:before {
@@ -232,6 +232,8 @@ a:hover {
 .hexagon__button.start-project, .hexagon__button.telegram {
     width: 100%;
     height: 48px;
+    text-decoration: none;
+    color: #000000;
 }
 
 .hexagon__button.telegram {
@@ -370,7 +372,7 @@ a:hover {
     position: absolute;
     top: 50px;
     right: 0;
-    z-index: 554;
+    z-index: 5;
     filter: url(#round);
     transition-duration: 1.2s;
 }
@@ -1101,7 +1103,7 @@ a:hover {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 55;
+    z-index: 6;
     width: 100%;
     height: 85%;
     background: transparent;
