Changed font styles for some texts

--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -365,6 +365,14 @@
         padding-bottom: 50px;
         color: #ffffff;
     }
+
+    .about__project__subtitle {
+        font-size: 20px;
+    }
+
+    .project__name {
+        font-size: 25px;
+    }
 }
 
 /*mobile*/
